--- a/changeAvatar/index.html
+++ b/changeAvatar/index.html
@@ -137,7 +137,7 @@ document.getElementById('saveImageButton').addEventListener('click', function() 
         quality: 1,
         multiplier: multiplier
     });
-    link.download = 'high-quality-image.png';
+    link.download = 'avatar-new.png';
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
