--- a/bantruyenthong/maria-lenhatlinh.html
+++ b/bantruyenthong/maria-lenhatlinh.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giuse Vũ Duy Linh</title>
+    <title>Maria Lê Nhật Link</title>
     <link rel="stylesheet" href="style.css" >
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
 		<div class="profile-header">
-			<img src="Linh.png" alt="Vũ Duy Linh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+			<img src="NhatLinh.png" alt="Maria Lê Nhật Linh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
 			<h2>Maria</h2>
 			<h2>Lê Nhật Linh</h2>
 		</div>
@@ -20,7 +20,7 @@
             <ul class="skills">
                 <li>Gx Thái Bình</li>
                 <li>Giáo Hạt Gò Vấp</li>
-				<li>Ban Truyền Thông</li>
+		<li>Ban Truyền Thông</li>
             </ul>
         </div>
 		<div class="skills">
@@ -38,7 +38,7 @@
 		</div>
 		<div class="biography">
 			<h2>Tiểu Sử & Thành Tích</h2>
-			<p>Maria Lê Nhật Linh tham dự  Sa Mạc Horeb 101 với vai trò Ban Truyền Thông. Từ vị trí này, cô tha hồ sỉ vả anh em trong ban, dằn mặt các Sa Mạc Sinh</p>
+			<p>Maria Lê Nhật Linh tham dự  Sa Mạc Horeb 101 với vai trò Ban Truyền Thông. Từ vị trí này, cô tha hồ sỉ vả anh em trong ban, dằn mặt các Sa Mạc Sinh, đâm chọt các thành viên ban truyền thông, hiếp dâm con heo đầy bà già xuống biển</p>
 		</div>
 		
     </div>
