--- a/ban-phung-vu/maria-nguyenthibichngoc.html
+++ b/ban-phung-vu/maria-nguyenthibichngoc.html
@@ -18,8 +18,8 @@
         <div class="profile-details">
             <ul class="skills">
 				<li>maria</li>
-                <li>nguyễn thị bích ngọc</li>
-				<li>ban phụng Vụ</li>                
+                <li>Nguyễn Thị Bích Ngọc</li>
+				<li>Ban Phụng Vụ</li>                
             </ul>
         </div>
         <div class="biography">
