--- a/ban-phung-vu/phanxico-savie-nguyenvuminhhuy.html
+++ b/ban-phung-vu/phanxico-savie-nguyenvuminhhuy.html
@@ -17,9 +17,9 @@
 		</div>
         <div class="profile-details">
             <ul class="skills">
-				<li>phanxico-savie</li>
-                <li>nguyễn vũ minh huy</li>
-				<li>ban phụng Vụ</li>                
+				<li>Phanxico Savie</li>
+                <li>Nguyễn Vũ Minh Huy</li>
+				<li>Ban Phụng Vụ</li>                
             </ul>
         </div>
         <div class="biography">
