--- a/ban-phung-vu/martin-marie-lientrongnhan.html
+++ b/ban-phung-vu/martin-marie-lientrongnhan.html
@@ -19,7 +19,7 @@
             <ul class="skills">
 				<li>Martin Marie</li>
                 <li>Liên Trọng Nhân</li>
-				<li>Ban Kỹ Thuật</li>                
+				<li>Ban Phụng Vụ</li>                
             </ul>
         </div>
         <div class="biography">
