--- a/ban-truyen-thong/gioanbosco-tranquanghuy.html
+++ b/ban-truyen-thong/gioanbosco-tranquanghuy.html
@@ -23,9 +23,7 @@
             </ul>
         </div>
         <div class="biography">
-            <h2>Hình Ành Sa Mạc horeb 101:</h2>
-            <p>Đang Cập nhật. </p>
-			<p>Thân ái chào 4 ngón trong Chúa Giêsu Thánh Thể</p>
+           <iframe src="slideshow.html" width="100%" height="500px" frameborder="0"></iframe>
         </div>
     </div>
 </body>
