--- a/ban-truyen-thong/gioan-bosco-tranquanghuy.html
+++ b/ban-truyen-thong/gioan-bosco-tranquanghuy.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div class="biography">
-           <iframe src="slideshow.html" width="100%" height="500px" frameborder="0"></iframe>
+           <iframe src="../loadImg.html" width="100%" height="500px" frameborder="0"></iframe>
         </div>
     </div>
 </body>
