--- a/loadImg.html
+++ b/loadImg.html
@@ -50,16 +50,13 @@
 </head>
 
 <body>
-
-    <h1>Google Drive Slideshow</h1>
-
     <div class="folder-list">
-        <h2>Select a folder:</h2>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1xym2f_3xoHW1wTErC-oSVfqX93O0pvEa')">Folder 1</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1rWXnEAbPUQi3hHpC7dXIj58UfaOnZTfp')">Folder 2</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_3')">Folder 3</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_4')">Folder 4</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_5')">Folder 5</button>
+        <h2>Lựa chọn hình bạn muốn xem:</h2>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1xym2f_3xoHW1wTErC-oSVfqX93O0pvEa')">Thứ 6 - Ngày Cầu Nguyện</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1rWXnEAbPUQi3hHpC7dXIj58UfaOnZTfp')">Sáng Thứ 7 - Ngày Thánh Thể</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_3')">Chiều Thứ 7 - Ngày Thánh Thể</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_4')">Tối Thứ 7 - Lửa Thiêng Thánh Thể</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_5')">Chúa Nhật - Ngày Làm Tông Đồ</button>
     </div>
 
     <div class="image-container">
