--- a/doi4/maria-nguyenhokieunhi.html
+++ b/doi4/maria-nguyenhokieunhi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/67.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/67.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Nguyễn Hồ Kiều  Nhi</h2>
             <p>Đội 4 - Anrê</p>
