--- a/doi8/teresa-thantranthiennga.html
+++ b/doi8/teresa-thantranthiennga.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/108.png" alt="Nga" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/108.png" alt="Nga" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Thân Trần Thiên Nga</h2>
             <p>Đội 8 - Batôlômêô</p>
