--- a/doi1/anna-chungocthuytrang.html
+++ b/doi1/anna-chungocthuytrang.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/3.png" alt="Trang" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/3.png" alt="Trang" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Chu Ngọc Thùy Trang</h2>
             <p>Đội 1 - Phêrô</p>
