--- a/doi1/anne-nguyenthanhtuuyen.html
+++ b/doi1/anne-nguyenthanhtuuyen.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/10.png" alt="Uyên" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/10.png" alt="Uyên" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anne</h2>
             <h2>Nguyễn Thanh Tú Uyên</h2>
             <p>Đội 1 - Phêrô</p>
