--- a/doi1/maria-chungocquynhnhu.html
+++ b/doi1/maria-chungocquynhnhu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/2.png" alt="Như" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/2.png" alt="Như" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Chu Ngọc Quỳnh Như</h2>
             <p>Đội 1 - Phêrô</p>
