--- a/doi1/maria-nguyenhoangminhthu.html
+++ b/doi1/maria-nguyenhoangminhthu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/8.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/8.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Nguyễn Hoàng Minh Thư</h2>
             <p>Đội 1 - Phêrô</p>
