--- a/doi1/teresa-doanquynhtram.html
+++ b/doi1/teresa-doanquynhtram.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/4.png" alt="Trâm" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/4.png" alt="Trâm" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Đoàn Quỳnh Trâm</h2>
             <p>Đội 1 - Phêrô</p>
