--- a/doi1/teresa-nguyenngocquynhanh.html
+++ b/doi1/teresa-nguyenngocquynhanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/9.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/9.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Nguyễn Ngọc Quỳnh Anh</h2>
             <p>Đội 1 - Phêrô</p>
