--- a/doi2/maria-lyanhthy.html
+++ b/doi2/maria-lyanhthy.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/51.png" alt="Thy" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/51.png" alt="Thy" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Lý Anh  Thy</h2>
             <p>Đội 2 - Gioan</p>
