--- a/doi2/maria-nguyenthibaongoc.html
+++ b/doi2/maria-nguyenthibaongoc.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/55.png" alt="Ngọc" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/55.png" alt="Ngọc" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria </h2>
             <h2>Nguyễn Thị Bảo  Ngọc</h2>
             <p>Đội 2 - Gioan</p>
