--- a/doi2/teresa-buithianhminh.html
+++ b/doi2/teresa-buithianhminh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/47.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/47.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Bùi Thị Ánh Minh</h2>
             <p>Đội 2 - Gioan</p>
