--- a/doi2/teresa-nguyenhoainamphuong.html
+++ b/doi2/teresa-nguyenhoainamphuong.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/52.png" alt="Phương" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/52.png" alt="Phương" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Nguyễn Hoài Nam   Phương</h2>
             <p>Đội 2 - Gioan</p>
