--- a/doi3/maria-nguyenngocbaohan.html
+++ b/doi3/maria-nguyenngocbaohan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/60.png" alt="Hân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/60.png" alt="Hân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Nguyễn Ngọc Bảo Hân</h2>
             <p>Đội 3 - Giacôbê</p>
