--- a/doi3/maria-nguyenthibaoha.html
+++ b/doi3/maria-nguyenthibaoha.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/61.png" alt="Hà" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/61.png" alt="Hà" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria </h2>
             <h2>Nguyễn Thị Bảo  Hà</h2>
             <p>Đội 3 - Giacôbê</p>
