--- a/doi3/teresa-dinhthingan.html
+++ b/doi3/teresa-dinhthingan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/56.png" alt="Ngân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/56.png" alt="Ngân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Đinh Thị Ngân</h2>
             <p>Đội 3 - Giacôbê</p>
