--- a/doi3/teresa-maria-trannguyenhoanha.html
+++ b/doi3/teresa-maria-trannguyenhoanha.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/64.png" alt="Nhã" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/64.png" alt="Nhã" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa Maria</h2>
             <h2>Trần Nguyễn Hòa Nhã</h2>
             <p>Đội 3 - Giacôbê</p>
