--- a/doi3/teresa-nguyendothanhhang.html
+++ b/doi3/teresa-nguyendothanhhang.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/59.png" alt="Hằng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/59.png" alt="Hằng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Nguyễn Đỗ Thanh Hằng</h2>
             <p>Đội 3 - Giacôbê</p>
