--- a/doi4/maria-hoangkimmythach.html
+++ b/doi4/maria-hoangkimmythach.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/65.png" alt="Thạch" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/65.png" alt="Thạch" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Hoàng Kim Mỹ Thạch</h2>
             <p>Đội 4 - Anrê</p>
