--- a/doi4/maria-tranthiquynhanh.html
+++ b/doi4/maria-tranthiquynhanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/71.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/71.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria </h2>
             <h2>Trần Thị Quỳnh Anh</h2>
             <p>Đội 4 - Anrê</p>
