--- a/doi4/maria-vuongmykhanh.html
+++ b/doi4/maria-vuongmykhanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/73.png" alt="Khanh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/73.png" alt="Khanh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Vương Mỹ  Khanh</h2>
             <p>Đội 4 - Anrê</p>
