--- a/doi4/teresa-nguyenthiminhthu.html
+++ b/doi4/teresa-nguyenthiminhthu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/69.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/69.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Nguyễn Thị Minh Thư</h2>
             <p>Đội 4 - Anrê</p>
