--- a/doi5/anna-dangnguyenngochan.html
+++ b/doi5/anna-dangnguyenngochan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/74.png" alt="Hân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/74.png" alt="Hân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Đặng Nguyễn Ngọc  Hân</h2>
             <p>Đội 5 - Philípphê</p>
