--- a/doi5/anna-nguyenhiennhi.html
+++ b/doi5/anna-nguyenhiennhi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/77.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/77.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Nguyễn Hiền Nhi</h2>
             <p>Đội 5 - Philípphê</p>
