--- a/doi5/maria-levananh.html
+++ b/doi5/maria-levananh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/75.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/75.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Lê Vân Anh</h2>
             <p>Đội 5 - Philípphê</p>
