--- a/doi5/teresa-truongngocanh.html
+++ b/doi5/teresa-truongngocanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/83.png" alt="Ánh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/83.png" alt="Ánh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Trương Ngọc  Ánh</h2>
             <p>Đội 5 - Philípphê</p>
