--- a/doi6/anna-maihuynhbichloan.html
+++ b/doi6/anna-maihuynhbichloan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/87.png" alt="Loan" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/87.png" alt="Loan" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Mai Huỳnh Bích Loan</h2>
             <p>Đội 6 - Giuđa Tađêô</p>
