--- a/doi6/maria-christine-lenguyenthienthanh.html
+++ b/doi6/maria-christine-lenguyenthienthanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/86.png" alt="Thanh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/86.png" alt="Thanh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria Christine</h2>
             <h2>Lê Nguyễn Thiên Thanh</h2>
             <p>Đội 6 - Giuđa Tađêô</p>
