--- a/doi6/maria-vongockyduyen.html
+++ b/doi6/maria-vongockyduyen.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/91.png" alt="Duyên" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/91.png" alt="Duyên" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Võ Ngọc Kỳ Duyên</h2>
             <p>Đội 6 - Giuđa Tađêô</p>
