--- a/doi6/teresa-nguyenvuthaihien.html
+++ b/doi6/teresa-nguyenvuthaihien.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/90.png" alt="Hiền" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/90.png" alt="Hiền" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Nguyễn Vũ Thái Hiền</h2>
             <p>Đội 6 - Giuđa Tađêô</p>
