--- a/doi7/anna-vungocanhthu.html
+++ b/doi7/anna-vungocanhthu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/102.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/102.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Vũ Ngọc Anh Thư</h2>
             <p>Đội 7 - Matthêu</p>
