--- a/doi7/catarina-lebaonhi.html
+++ b/doi7/catarina-lebaonhi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/97.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/97.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Catarina</h2>
             <h2>Lê Bảo  Nhi</h2>
             <p>Đội 7 - Matthêu</p>
