--- a/doi7/maria-dinhthuyanh.html
+++ b/doi7/maria-dinhthuyanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/94.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/94.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Đinh Thúy Anh</h2>
             <p>Đội 7 - Matthêu</p>
