--- a/doi7/teresa-hoangthaonhi.html
+++ b/doi7/teresa-hoangthaonhi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/96.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/96.png" alt="Nhi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Hoàng Thảo Nhi</h2>
             <p>Đội 7 - Matthêu</p>
