--- a/doi8/anna-trannhatphuongthao.html
+++ b/doi8/anna-trannhatphuongthao.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/110.png" alt="Thảo" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/110.png" alt="Thảo" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Anna</h2>
             <h2>Trần Nhật Phương Thảo</h2>
             <p>Đội 8 - Batôlômêô</p>
