--- a/doi8/maria-dangnguyenhoangmai.html
+++ b/doi8/maria-dangnguyenhoangmai.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/104.png" alt="Mai" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/104.png" alt="Mai" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Đặng Nguyễn Hoàng  Mai</h2>
             <p>Đội 8 - Batôlômêô</p>
