--- a/doi8/maria-vunguyensonghuong.html
+++ b/doi8/maria-vunguyensonghuong.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/111.png" alt="Hương" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/111.png" alt="Hương" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Vũ Nguyễn Song Hương</h2>
             <p>Đội 8 - Batôlômêô</p>
