--- a/doi8/maria-vuthikhanhlinh.html
+++ b/doi8/maria-vuthikhanhlinh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/112.png" alt="Linh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/112.png" alt="Linh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Maria</h2>
             <h2>Vũ Thị Khánh Linh</h2>
             <p>Đội 8 - Batôlômêô</p>
