--- a/doi8/teresa-tranngocminhthu.html
+++ b/doi8/teresa-tranngocminhthu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/109.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/109.png" alt="Thư" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Teresa</h2>
             <h2>Trần Ngọc Minh Thư</h2>
             <p>Đội 8 - Batôlômêô</p>
