--- a/doi10/daminh-nguyenvanthuan.html
+++ b/doi10/daminh-nguyenvanthuan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/19.png" alt="Thuận" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/19.png" alt="Thuận" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Đaminh</h2>
             <h2>Nguyễn Văn  Thuận</h2>
             <p>Đội 10 - Mathia</p>
