--- a/doi10/laurenso-buidanghoangquan.html
+++ b/doi10/laurenso-buidanghoangquan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/11.png" alt="Quân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/11.png" alt="Quân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Laurenso</h2>
             <h2>Bùi Đặng Hoàng Quân</h2>
             <p>Đội 10 - Mathia</p>
