--- a/doi10/phanxico-xavie-phamcongthien.html
+++ b/doi10/phanxico-xavie-phamcongthien.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/20.png" alt="Thiện" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/20.png" alt="Thiện" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phanxico Xavie</h2>
             <h2>Phạm Công  Thiện</h2>
             <p>Đội 10 - Mathia</p>
