--- a/doi10/phero-ngominhanh.html
+++ b/doi10/phero-ngominhanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/12.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/12.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phêrô</h2>
             <h2>Ngô Minh Anh</h2>
             <p>Đội 10 - Mathia</p>
