--- a/doi10/phero-nguyentoanphuc.html
+++ b/doi10/phero-nguyentoanphuc.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/16.png" alt="Phúc" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/16.png" alt="Phúc" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phêrô</h2>
             <h2>Nguyễn Toàn Phúc</h2>
             <p>Đội 10 - Mathia</p>
