--- a/doi10/phero-phaolo-nguyenanhtrieu.html
+++ b/doi10/phero-phaolo-nguyenanhtrieu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/13.png" alt="Triệu" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/13.png" alt="Triệu" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phero Phaolo</h2>
             <h2>Nguyễn Anh Triệu</h2>
             <p>Đội 10 - Mathia</p>
