--- a/doi11/daminh-taminhkhoi.html
+++ b/doi11/daminh-taminhkhoi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/33.png" alt="Khôi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/33.png" alt="Khôi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Đaminh</h2>
             <h2>Tạ Minh Khôi</h2>
             <p>Đội 11 - Giacôbê Hậu</p>
