--- a/doi11/gierado-hoangthienan.html
+++ b/doi11/gierado-hoangthienan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/25.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/25.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Gierado</h2>
             <h2>Hoàng Thiên Ân</h2>
             <p>Đội 11 - Giacôbê Hậu</p>
