--- a/doi11/gioan-baotixita-doanquangminh.html
+++ b/doi11/gioan-baotixita-doanquangminh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/24.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/24.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Gioan Baotixita</h2>
             <h2>Đoàn Quang Minh</h2>
             <p>Đội 11 - Giacôbê Hậu</p>
