--- a/doi11/louis-leminhdat.html
+++ b/doi11/louis-leminhdat.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/27.png" alt="Đạt" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/27.png" alt="Đạt" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Louis</h2>
             <h2>Lê Minh Đạt</h2>
             <p>Đội 11 - Giacôbê Hậu</p>
