--- a/doi11/vincente-nguyenhoangminhdang.html
+++ b/doi11/vincente-nguyenhoangminhdang.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/30.png" alt="Đăng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/30.png" alt="Đăng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Vincente</h2>
             <h2>Nguyễn Hoàng Minh Đăng</h2>
             <p>Đội 11 - Giacôbê Hậu</p>
