--- a/doi12/gioan-baotixita-phamphivu.html
+++ b/doi12/gioan-baotixita-phamphivu.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/42.png" alt="Vũ" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/42.png" alt="Vũ" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Gioan Baotixita</h2>
             <h2>Phạm Phi Vũ</h2>
             <p>Đội 12 - Tôma</p>
