--- a/doi12/giuse-huynhminhnhut.html
+++ b/doi12/giuse-huynhminhnhut.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/37.png" alt="Nhựt" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/37.png" alt="Nhựt" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Giuse</h2>
             <h2>Huỳnh Minh Nhựt</h2>
             <p>Đội 12 - Tôma</p>
