--- a/doi12/laurenso-phamgiabao.html
+++ b/doi12/laurenso-phamgiabao.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/41.png" alt="Bảo" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/41.png" alt="Bảo" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Laurenso</h2>
             <h2>Phạm Gia Bảo</h2>
             <p>Đội 12 - Tôma</p>
