--- a/doi12/matheu-luudaotrungduc.html
+++ b/doi12/matheu-luudaotrungduc.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/39.png" alt="Đức" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/39.png" alt="Đức" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Matheu</h2>
             <h2>Lưu Đào Trung  Đức</h2>
             <p>Đội 12 - Tôma</p>
