--- a/doi12/phero-nguyenthienan.html
+++ b/doi12/phero-nguyenthienan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/40.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/40.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phêrô</h2>
             <h2>Nguyễn Thiên Ân</h2>
             <p>Đội 12 - Tôma</p>
