--- a/doi9/daminh-ngoducanh.html
+++ b/doi9/daminh-ngoducanh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/115.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/115.png" alt="Anh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Đaminh</h2>
             <h2>Ngô Đức Anh</h2>
             <p>Đội 9 - Simon</p>
