--- a/doi9/gioakim-vuvanquyen.html
+++ b/doi9/gioakim-vuvanquyen.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/124.png" alt="Quyến" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/124.png" alt="Quyến" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Gioakim</h2>
             <h2>vũ văn Quyến</h2>
             <p>Đội 9 - Simon</p>
