--- a/doi9/gioan-nguyenngocminh.html
+++ b/doi9/gioan-nguyenngocminh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/118.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/118.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Gioan</h2>
             <h2>Nguyễn Ngọc Minh</h2>
             <p>Đội 9 - Simon</p>
