--- a/doi9/giuse-nguyenquanthephi.html
+++ b/doi9/giuse-nguyenquanthephi.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/120.png" alt="Phi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/120.png" alt="Phi" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Giuse</h2>
             <h2>Nguyễn Quan Thế Phi</h2>
             <p>Đội 9 - Simon</p>
