--- a/doi9/phero-nguyenquangminh.html
+++ b/doi9/phero-nguyenquangminh.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/126.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/126.png" alt="Minh" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phero</h2>
             <h2>Nguyễn Quang Minh</h2>
             <p>Đội 9 - Simon</p>
