--- a/doi9/phero-truonghoanglong.html
+++ b/doi9/phero-truonghoanglong.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/122.png" alt="Long" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/122.png" alt="Long" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phêrô</h2>
             <h2>Trương Hoàng Long</h2>
             <p>Đội 9 - Simon</p>
