--- a/doi9/vincente-lethiennhan.html
+++ b/doi9/vincente-lethiennhan.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/125.png" alt="Nhân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/125.png" alt="Nhân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Vincente</h2>
             <h2>Lê Thiện  Nhân</h2>
             <p>Đội 9 - Simon</p>
