--- a/doi9/vincente-truongleminhhung.html
+++ b/doi9/vincente-truongleminhhung.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="./images/123.png" alt="Hùng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/123.png" alt="Hùng" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Vincente</h2>
             <h2>Trương Lê Minh Hùng</h2>
             <p>Đội 9 - Simon</p>
