--- a/loadImg.html
+++ b/loadImg.html
@@ -52,11 +52,11 @@
 <body>
     <div class="folder-list">
         <h2>Lựa chọn hình bạn muốn xem:</h2>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1xym2f_3xoHW1wTErC-oSVfqX93O0pvEa')">Thứ 6 - Ngày Cầu Nguyện</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1rWXnEAbPUQi3hHpC7dXIj58UfaOnZTfp')">Sáng Thứ 7 - Ngày Thánh Thể</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_3')">Chiều Thứ 7 - Ngày Thánh Thể</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_4')">Tối Thứ 7 - Lửa Thiêng Thánh Thể</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('FOLDER_ID_5')">Chúa Nhật - Ngày Làm Tông Đồ</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1AiExWXhf79Jbrt0qIF6_Nj0DNsrxMfys')">Tiền Sa Mạc</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n')">Thứ 6 - Ngày Cầu Nguyện</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1CB24NomG1r3GWGC650KyniKVV_fPjVKo')">Thứ 7 - Ngày Thánh Thể</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1YkQt1xCsWSUNJt0WkeZYKvJkdX_5YqR0')">Lửa Thiêng Thánh Thể</button>
+        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1xQCE4TYunXf-EfRkiMIsLzepKWkOgSGF')">Chúa Nhật - Ngày Làm Tông Đồ</button>
     </div>
 
     <div class="image-container">
