--- a/loadImg.html
+++ b/loadImg.html
@@ -82,7 +82,7 @@
 
 <body>
     <div class="folder-list">
-        <h2>Lựa chọn hình bạn muốn xem:</h2>
+        <h3>Lựa chọn hình bạn muốn xem hoặc <a href="https://drive.google.com/drive/folders/1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n">Bấm vào đây </a> để mở trong Google Drive:</h3>
         <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1AiExWXhf79Jbrt0qIF6_Nj0DNsrxMfys')">Tiền Sa Mạc</button>
         <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n')">Thứ 6 - Ngày Cầu Nguyện</button>
     </div>
