--- a/doi2/maria-langnhuhuyen.html
+++ b/doi2/maria-langnhuhuyen.html
@@ -32,7 +32,7 @@
             </div>
             <div class="input-container">
                 <span>Lý Thuyết: </span>
-                <input type="text" value="Loading" disabled>
+                <input type="text" value="Loading..." disabled>
             </div>
             <div class="input-container">
                 <span>Hiện diện trong Sa Mạc: </span>
@@ -40,11 +40,11 @@
             </div>
             <div class="input-container">
                 <span>Hậu Sa Mạc: </span>
-                <input type="text" value="Loading" disabled>
+                <input type="text" value="Loading..." disabled>
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="9.5" disabled>
+                <input type="text" value="Loading..." disabled>
             </div>
         </div>
 
