--- a/doi9/giuse-nguyenphamminhtri.html
+++ b/doi9/giuse-nguyenphamminhtri.html
@@ -32,7 +32,7 @@
             </div>
             <div class="input-container">
                 <span>Lý Thuyết: </span>
-                <input type="text" value="Loading" disabled>
+                <input type="text" value="Loading..." disabled>
             </div>
             <div class="input-container">
                 <span>Hiện diện trong Sa Mạc: </span>
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="7" disabled>
+                <input type="text" value="Loading..." disabled>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
                 7, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                8.5, 
+                null, 
                 7
             ];
             const totalFields = values.length;
