--- a/doi2/jeanne-darc-nguyenhoangxuannhu.html
+++ b/doi2/jeanne-darc-nguyenhoangxuannhu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Đặng Nguyễn Ngọc  Hân</title>
+    <title>Jeanne D' Arc Nguyễn Hoàng Xuân Như</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
@@ -12,23 +12,23 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="../images/74.png" alt="Hân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
-            <h2>Anna</h2>
-            <h2>Đặng Nguyễn Ngọc  Hân</h2>
-            <p>Đội 5 - Philípphê</p>
+            <img src="../images/127.png" alt="Như" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <h2>Jeanne D' Arc</h2>
+            <h2>Nguyễn Hoàng Xuân Như</h2>
+            <p>Đội 2 - Gioan</p>
         </div>
         <div class="profile-details">
             <h3>Details:</h3>
             <ul class="skills">
-                <li>Giáo Xứ Don Bosco Ba Thôn</li>
-                <li>Giáo Hạt Hóc Môn</li>
+                <li>Giáo Xứ Bình Chánh</li>
+                <li>Giáo Hạt Tân Sơn Nhì</li>
             </ul>
         </div>
         <div class="skills-5">
             <h2>Sa Mạc Huấn Luyện HT Cấp 1 Horeb 101: </h2>
             <div class="input-container">
                 <span>Tiền Sa Mạc: </span>
-                <input type="text" value="10" disabled>
+                <input type="text" value="9" disabled>
             </div>
             <div class="input-container">
                 <span>Lý Thuyết: </span>
@@ -40,7 +40,7 @@
             </div>
             <div class="input-container">
                 <span>Hậu Sa Mạc: </span>
-                <input type="text" value="9" disabled>
+                <input type="text" value="9.5" disabled>
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
@@ -64,11 +64,11 @@
         // JavaScript để cập nhật thanh tiến trình và hiển thị phần trăm
         document.addEventListener("DOMContentLoaded", function() {
             const values = [
-                10, 
+                9, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
                 null, 
-                8
+                9
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
