--- a/loadImg.html
+++ b/loadImg.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Drive Slideshow</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mui/material@5.0.0-alpha.54/dist/material.min.css">
+    <title>Google Drive Thumbnail Slideshow</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,110 +16,120 @@
             margin: 20px;
         }
 
-        .image-container {
-            margin-top: 20px;
+        .slideshow-container {
+            max-width: 1000px;
             position: relative;
-            max-width: 800px;
-            margin: 0 auto;
+            margin: auto;
         }
 
-        .image-container img {
-            max-width: 100%;
+        .mySlides {
+            display: none;
+        }
+
+        img {
+            width: 100%;
             height: auto;
-            display: block;
-            margin: 0 auto;
             cursor: pointer;
         }
 
-        .controls {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-
-        .controls button {
-            width: 60px;
-            height: 60px;
-            font-size: 24px;
-            margin: 5px;
+        .prev, .next {
             cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            border: none;
-            background-color: white;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            border: 2px solid #4caf50;
-            color: #4caf50;
-            transition: all 0.2s ease; /* Thêm hiệu ứng chuyển động */
-        }
-
-        .controls button:active {
-            box-shadow: none;
-            transform: translateY(3px); /* Tạo hiệu ứng nút nhấn xuống */
-        }
-
-        .controls button:hover {
-            background-color: #e0e0e0;
-        }
-
-        .mui-btn--contained {
-            background-color: white;
-            color: #4caf50;
-            border: 2px solid #4caf50;
-        }
-
-        .mui-btn--contained:hover {
-            background-color: #4caf50;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            padding: 16px;
+            margin-top: -22px;
             color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            user-select: none;
+        }
+
+        .prev {
+            left: 0;
+            border-radius: 3px 0 0 3px;
+        }
+
+        .next {
+            right: 0;
+            border-radius: 0 3px 3px 0;
+        }
+
+        .prev:hover, .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+
+        /* Loading Spinner */
+        .loading-spinner {
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #3498db;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Hide spinner by default */
+        #loadingSpinner {
+            display: none;
         }
     </style>
 </head>
 
 <body>
+    <!-- Loading Spinner -->
+    <div id="loadingSpinner" class="loading-spinner"></div>
+
+    <!-- Folder Selection -->
     <div class="folder-list">
         <h3>Lựa chọn hình bạn muốn xem hoặc <a href="https://drive.google.com/drive/folders/1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n" target="_blank" rel="noreferrer">Bấm vào đây </a> để mở trong Google Drive:</h3>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1AiExWXhf79Jbrt0qIF6_Nj0DNsrxMfys')">Tiền Sa Mạc</button>
-        <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n')">Thứ 6 - Ngày Cầu Nguyện</button>
-    </div>
-    <div class="image-container">
-        <a href="#" id="imageLink" target="_blank">
-            <img id="currentImage" src="" alt="Horeb 101 Image">
-        </a>
+        <button onclick="loadImagesFromGoogleDrive('1AiExWXhf79Jbrt0qIF6_Nj0DNsrxMfys')">Tiền Sa Mạc</button>
+        <button onclick="loadImagesFromGoogleDrive('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n')">Thứ 6 - Ngày Cầu Nguyện</button>
+        <!-- Add more folders as needed -->
     </div>
 
-    <div class="controls">
-        <button class="mui-btn mui-btn--outlined" id="prevBtn" onclick="prevImage()" disabled>
-            <i class="material-icons">arrow_back</i>
-        </button>
-		<button class="mui-btn mui-btn--contained" id="playBtn" onclick="startSlideshow()" disabled>
-            <i class="material-icons">play_arrow</i>
-        </button>
-        <button class="mui-btn mui-btn--outlined" id="nextBtn" onclick="nextImage()" disabled>
-            <i class="material-icons">arrow_forward</i>
-        </button>        
+    <div class="slideshow-container">
+        <div id="slideshowContent"></div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
 
     <script>
-        const API_KEY = 'AIzaSyBvJic-X8DdTAy1_arZTL_0LH2lZ0iKcGU'; // Thay thế bằng API Key của bạn
+        const API_KEY = 'AIzaSyBvJic-X8DdTAy1_arZTL_0LH2lZ0iKcGU'; // Thay bằng API key của bạn
         let images = [];
-        let currentIndex = 0;
-        let slideshowInterval = null;
+        let slideIndex = 1;
 
-		document.addEventListener("DOMContentLoaded", function () {
-            loadImagesFromFolder('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n');
-        });
-		
-        async function loadImagesFromFolder(folderId) {
+        // Hiển thị loading spinner
+        function showLoading() {
+            document.getElementById('loadingSpinner').style.display = 'block';
+        }
+
+        // Ẩn loading spinner
+        function hideLoading() {
+            document.getElementById('loadingSpinner').style.display = 'none';
+        }
+
+        // Hàm để lấy toàn bộ hình ảnh từ Google Drive
+        async function loadImagesFromGoogleDrive(folderId) {
             const url = `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents&key=${API_KEY}&fields=files(id,name,mimeType)&pageSize=1000`;
-
             try {
+                showLoading(); // Hiển thị spinner
                 const response = await fetch(url);
                 const data = await response.json();
-                
-                // Lọc ra các tệp là ảnh
+
                 images = data.files
                     .filter(file => file.mimeType.startsWith('image/'))
                     .map(file => ({
@@ -131,60 +139,58 @@
                     }));
 
                 if (images.length > 0) {
-                    currentIndex = 0;
-                    displayImage();
-                    updateControls();
+                    createSlideshow();
+                    hideLoading(); // Ẩn spinner sau khi tải xong
                 } else {
                     alert('No images found in this folder.');
+                    hideLoading();
                 }
             } catch (error) {
                 console.error('Error fetching images:', error);
+                hideLoading();
             }
         }
 
-        function displayImage() {
-            const imageElement = document.getElementById('currentImage');
-            const imageLinkElement = document.getElementById('imageLink');
-            imageElement.src = images[currentIndex].thumbnail;
-            imageLinkElement.href = images[currentIndex].fullImage;
+        // Hàm để tạo slideshow
+        function createSlideshow() {
+            const slideshowContainer = document.getElementById('slideshowContent');
+
+            slideshowContainer.innerHTML = ''; // Reset nội dung
+
+            images.forEach((image, index) => {
+                // Tạo div cho mỗi slide
+                const slideDiv = document.createElement('div');
+                slideDiv.classList.add('mySlides');
+                const imgElement = document.createElement('img');
+                imgElement.src = image.thumbnail;
+
+                // Khi nhấn vào thumbnail, mở tab mới để xem ảnh đầy đủ
+                imgElement.onclick = () => window.open(image.fullImage, '_blank');
+
+                slideDiv.appendChild(imgElement);
+                slideshowContainer.appendChild(slideDiv);
+            });
+
+            showSlides(slideIndex); // Hiển thị slide đầu tiên
         }
 
-        function nextImage() {
-            if (currentIndex < images.length - 1) {
-                currentIndex++;
-                displayImage();
+        // Hàm để điều khiển slides
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function showSlides(n) {
+            let i;
+            const slides = document.getElementsByClassName('mySlides');
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = 'none';
             }
-            updateControls();
-        }
-
-        function prevImage() {
-            if (currentIndex > 0) {
-                currentIndex--;
-                displayImage();
-            }
-            updateControls();
-        }
-
-        function updateControls() {
-            document.getElementById('prevBtn').disabled = currentIndex === 0;
-            document.getElementById('nextBtn').disabled = currentIndex === images.length - 1;
-            document.getElementById('playBtn').disabled = images.length <= 1;
-        }
-
-        function startSlideshow() {
-            if (slideshowInterval) {
-                clearInterval(slideshowInterval);
-            }
-            slideshowInterval = setInterval(() => {
-                if (currentIndex < images.length - 1) {
-                    nextImage();
-                } else {
-                    currentIndex = 0;
-                    displayImage();
-                }
-            }, 3000);
+            slides[slideIndex - 1].style.display = 'block';
         }
     </script>
+
 </body>
 
 </html>
