--- a/doi1/anne-nguyenthanhtuuyen.html
+++ b/doi1/anne-nguyenthanhtuuyen.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="10" disabled>
             </div>
         </div>
 
@@ -67,8 +67,8 @@
                 9.5, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                6
+                7,  
+                10
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
