--- a/doi6/maria-doquynhhuong.html
+++ b/doi6/maria-doquynhhuong.html
@@ -67,8 +67,8 @@
                 10, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                7
+                null,  
+                null
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
