--- a/doi2/maria-langnhuhuyen.html
+++ b/doi2/maria-langnhuhuyen.html
@@ -67,8 +67,8 @@
                 9.8, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                9.5
+                null,  
+                null
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
