--- a/doi3/maria-lythanhtam.html
+++ b/doi3/maria-lythanhtam.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="8" disabled>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
                 8.8, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
+                9,  
                 8
             ];
             const totalFields = values.length;
