--- a/doi3/maria-phamthitam.html
+++ b/doi3/maria-phamthitam.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="7" disabled>
             </div>
         </div>
 
@@ -67,8 +67,8 @@
                 9.8, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                10
+                9.5,  
+                7
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
