--- a/doi5/maria-nguyenhoangquynhnhu.html
+++ b/doi5/maria-nguyenhoangquynhnhu.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="7" disabled>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
                 9, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
+                7.5,  
                 7
             ];
             const totalFields = values.length;
