--- a/doi5/maria-tranthungan.html
+++ b/doi5/maria-tranthungan.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="8" disabled>
             </div>
         </div>
 
@@ -67,8 +67,8 @@
                 10, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                7.5
+                9,  
+                8
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
