--- a/doi5/teresa-truongngocanh.html
+++ b/doi5/teresa-truongngocanh.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="7.5" disabled>
             </div>
         </div>
 
@@ -67,8 +67,8 @@
                 8.5, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                null
+                10,  
+                7.5
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
