--- a/doi6/maria-vongockyduyen.html
+++ b/doi6/maria-vongockyduyen.html
@@ -44,7 +44,7 @@
             </div>
             <div class="input-container">
                 <span>Sổ Khóa: </span>
-                <input type="text" value="Loading..." disabled>
+                <input type="text" value="6" disabled>
             </div>
         </div>
 
@@ -67,8 +67,8 @@
                 9, 
                 null, 
                 100, // Hiện diện trong Sa Mạc luôn là 100
-                null, 
-                7
+                7.8,  
+                6
             ];
             const totalFields = values.length;
             const filledFields = values.filter(value => value !== null).length;
