--- a/doi12/phero-hoangminhhien.html
+++ b/doi12/phero-hoangminhhien.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="../images/40.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
+            <img src="../images/46.png" alt="Ân" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 10px; object-fit: cover;">
             <h2>Phêrô</h2>
             <h2>Hoàng Minh Hiển</h2>
             <h2>Đội 12 - Tôma</h2>
@@ -20,8 +20,8 @@
         <div class="profile-details">
             <h3>Details:</h3>
             <ul class="skills">
-                <li>Loading....</li>
-                <li>Loading...</li>
+                <li>Giáo Xứ Tân Đức</li>
+                <li>Giáo Hạt Thủ Thiêm</li>
             </ul>
         </div>
         <div class="skills-5">
