--- a/loadImg.html
+++ b/loadImg.html
@@ -93,7 +93,7 @@
 
     <!-- Folder Selection -->
     <div class="folder-list">
-        <h3>Lựa chọn hình bạn muốn xem hoặc <a href="https://drive.google.com/drive/folders/1CB24NomG1r3GWGC650KyniKVV_fPjVKo" target="_blank" rel="noreferrer">Bấm vào đây </a> để mở chất lượng cao trong Google Drive:</h3>
+        <h3>Lựa chọn hình bạn muốn xem hoặc <a href="https://drive.google.com/drive/folders/1CB24NomG1r3GWGC650KyniKVV_fPjVKo" target="_blank" rel="noreferrer">Bấm vào đây </a> để mở trong Google Drive -ngày Thánh Thể</h3>
         <button onclick="loadImagesFromGoogleDrive('1AiExWXhf79Jbrt0qIF6_Nj0DNsrxMfys')">Tiền Sa Mạc</button>
         <button onclick="loadImagesFromGoogleDrive('1gDbKgwPeIWPQDMVOKfoZNjeK6pDO567n')">Thứ 6 - Ngày Cầu Nguyện</button>
         <button class="mui-btn mui-btn--raised" onclick="loadImagesFromFolder('1CB24NomG1r3GWGC650KyniKVV_fPjVKo')">Thứ 7 - Ngày Thánh Thể</button>
